# cpp-task-praktice

./: .gitignore  README.md
1-semestr/hw_11.10.2021/: main.cpp
1-semestr/hw_18_10_2021/: CMakeLists.txt  README.md  main.cpp
1-semestr/stars/: CMakeLists.txt  main.cpp
1-semestr/tasks_11.10.2021/: CMakeLists.txt  README.md
1-semestr/tasks_15_11_2021/: CMakeLists.txt
1-semestr/tasks_18_10_2021/: CMakeLists.txt  README.md
1-semestr/tasks_1_11_2021/: README.md
1-semestr/tasks_22_11_2021/: CMakeLists.txt
1-semestr/tasks_25_10_2021/: CMakeLists.txt  main.cpp
1-semestr/tasks_29_11_2021/: CMakeLists.txt  README.md
1-semestr/tasks_8_11_2021/: README.md  main.cpp
2-semestr/avl-tree/: CMakeLists.txt
2-semestr/date/: README.md
2-semestr/date/test/: CMakeLists.txt  dateTest.cpp  mainTest.cpp
2-semestr/simple-list/: CMakeLists.txt
2-semestr/task- inheritance/: CMakeLists.txt
2-semestr/task-async/: main.cpp
2-semestr/task-expression/: CMakeLists.txt  README.md  main.cpp
2-semestr/task-macro/: CMakeLists.txt  main.cpp
hw_11.10.2021/: CMakeLists.txt  README.md
hw_18_10_2021/: main.cpp
simple-arr/: CMakeLists.txt
stars/: README.md  main.cpp
tasks_11.10.2021/: CMakeLists.txt  main.cpp
tasks_15_11_2021/: CMakeLists.txt  README.md
tasks_18_10_2021/: main.cpp
tasks_1_11_2021/: CMakeLists.txt  README.md  main.cpp
tasks_22_11_2021/: README.md
tasks_25_10_2021/: README.md  main.cpp
tasks_6_12_2021/: CMakeLists.txt  README.md
tasks_8_11_2021/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  README.md  main.cpp  test.cpp  test.h
(+101 files in other folders)
